# llm-tools

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: python-release.yml
docker-images-build/core/: Dockerfile
llm_tools/logger/: logger.py
llm_tools/meta/: retrieve_document.py
llm_tools/meta/interfaces/: retrieval.py  text_encoder.py  vector_store.py
llm_tools/text_encoders/: openai_encoder.py
llm_tools/vector_stores/: chroma_store.py  weaviate_store.py
notebooks/: 01-demo-chroma-cache.ipynb  02-demo-weaviate-cache.ipynb  03-demo-retrieval.ipynb
