[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.isort]
profile = "black"
length_sort = true
combine_as_imports = true
force_sort_within_sections = true

[tool.poetry]
name = "llm_tools"
version = "0.0.1"
packages = [
    { include = "llm_tools" }
]
description = "This is the base package for llm_tools"
authors = ["collectiveai <info@collectiveai.io>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^10.5.0"
openai = "^1.52.2"
rich = "^13.9.3"
tqdm = "^4.66.6"
numpy = "^2.1.2"
weaviate-client = "^4.9.0"
tiktoken = "^0.8.0"
chromadb = "^0.5.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
# awscli = "^1.33.0"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
radon = "==5.1.0"
black = "^24.8.0"

[tool.pytest.ini_options]
# addopts="-n4"
testpaths = ["test"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:.*:DeprecationWarning',
]
